# connect-python

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yaml  conformance.yaml
cmd/protoc-gen-connect-python/: main.go
conformance/: client_config.yaml  client_known_failing.yaml  client_known_flaky.yaml  client_runner.py  pyproject.toml  run-test-case.txt  run-testcase-tmp.txt  run-testcase.txt  server.py  server_config.yaml  server_known_failing.yaml  server_known_flaky.yaml  server_runner.py  tls.py
deploy/base/: deployment.yaml  horizontal_pod_autoscaler.yaml  kustomization.yaml  namespace.yaml  service.yaml
deploy/dev/: deployment.yaml  kustomization.yaml  service_account.yaml
examples/: Dockerfile  README.md  client.py  eliza.py  go.mod  go.sum  main.py  pyproject.toml  server.py  unary_connect_server.py
spec/: conformance-error.txt
src/connect/: __init__.py  app.py  byte_stream.py  call_options.py  client.py  client_interceptor.py  code.py  codec.py  compression.py  connect.py  connection_pool.py  content_stream.py  demo.py  envelope.py  error.py  hander.py  handler.py  handler_context.py  handler_interceptor.py  headers.py  idempotency_level.py  interceptor.py  middleware.py  options.py  protocol.py  protocol_connect.py  protocol_grpc.py  request.py  utils.py  (+10 more)
tests/: README.md  conftest.py  main.py  test_connect.py  test_connect_client_unary.py  test_connect_server_unary.py  test_streaming_connect_client.py  test_streaming_connect_server.py  test_unary_connect_client.py  test_unary_connect_server.py
(+41 files in other folders)
