[project]
name = "conformance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "tsubakiky", email = "salovers1205@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "connect-python",
  "cryptography>=44.0.2",
  "h2>=4.2.0",
]

[tool.uv.sources]
connect-python = { path = "../" }
